--- a/asset-dashboard-ui/package.json
+++ b/asset-dashboard-ui/package.json
@@ -11,51 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@stomp/stompjs": "^4.0.7",
-    "@types/leaflet": "^1.2.11",
-    "adm-zip": "^0.4.11",
-    "chart.js": "^2.7.2",
-    "core-js": "^2.5.4",
-    "cryptiles": "^4.1.2",
-    "leaflet": "^1.3.4",
-    "parsejson": "^0",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@stomp/stompjs": "^5.3.0",
+    "@types/leaflet": "^1.4.4",
+    "adm-zip": "^0.4.13",
+    "chart.js": "^2.8.0",
+    "core-js": "^3.1.3",
+    "cryptiles": "^4.1.3",
+    "leaflet": "^1.5.1",
     "queueing-subject": "^0.3.0",
-    "rxjs": "^6.0.0",
-    "rxjs-websockets": "^6.0.1",
-    "sockjs-client": "^1.1.5",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.2",
+    "rxjs-websockets": "^7.0.0",
+    "sockjs-client": "^1.3.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.0.1",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "hoek": "5.0.3",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "~0.800.1",
+    "@angular/cli": "~8.0.1",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@types/jasmine": "~3.3.13",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~12.0.4",
+    "codelyzer": "~5.1.0",
+    "hoek": "6.1.3",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "ts-node": "~8.2.0",
+    "tslint": "~5.17.0",
+    "typescript": "3.5.0-rc"
   }
 }
